--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2014,12 +2014,11 @@
         commandId[i].startsWith("SW") ? await genSub(indices[0]) : await genSpeaker(indices[0]);
         await fetch_mREW(mlpIdx, 'PUT', { title: `${commandId[i]}-mlp` });
         await postNext('Smooth', mlpIdx, { smoothing: "1/48" });
-        // level match all positions to MLP
-        await alignVol2MLP(indices);
         // spatially average
         console.infoUpdate(`Spatially averaging channel ${commandId[i]} using <${indices.length}> microphone position(s)...`);
         if (indices.length > 1) {
-          await postNext('Cross corr align', indices);
+          await alignVol2MLP(indices); // level match non-MLP positions to MLP
+          await postNext('Cross corr align', indices); // time align non-MLP positions to MLP
           await postNext('Magn plus phase average', indices); // do not use VA, it reduces SPL!
           // apply widest IR window to average
           const [leftWindow, rightWindow] = await getMaxIRWindow(indices);
