--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2339,14 +2339,24 @@
       return baseFilterIdx; // combined filter consisting of all customizations
     }
     async function getUHFFilter(idxWithEQ, targetCurveIdx) {
-      // returns magnitude only filter for knocking down any ultra high frequency peaks
+      // returns min. phase filter for knocking down any ultra high frequency peaks
       const tempEQSpeaker = await postNext('Generate predicted measurement', idxWithEQ);
       const tempEQSpeakerIdx = Object.keys(tempEQSpeaker.results)[0];
       const volAdjust = 75.0 - await fetchSafe("target-level", idxWithEQ);
       await postNext('Add SPL offset', tempEQSpeakerIdx, { offset: volAdjust });
-      await postNext('Arithmetic', [targetCurveIdx, tempEQSpeakerIdx],
-                      { function: "|A| / |B|", // magnitude only fine for UHF
-                        maxGain: 0, lowerLimit: 10000, upperLimit: 24000});
+      const UHFFilter = await postNext('Arithmetic', [targetCurveIdx, tempEQSpeakerIdx],
+                                      { function: "A / B", // magnitude only can produce artifacts
+                                        maxGain: 0, lowerLimit: 10000, upperLimit: 24000});
+      // convert to minimum phase
+      const UHFFilterIdx = Object.keys(UHFFilter.results)[0];
+      await postNext('Minimum phase version', UHFFilterIdx, {
+        "include cal": true,
+        "append lf tail": false,
+        "append hf tail": false,
+        "frequency warping": false,
+        "replicate data": true
+      });
+      await postDelete(UHFFilterIdx);
       await postDelete(tempEQSpeakerIdx); // UHF filter now at tempEQSpeakerIdx
       return tempEQSpeakerIdx;
     }
@@ -3402,12 +3412,12 @@
       });
     }
     async function getFilterPoints(fltIdx, useAntiHF=false) {
-      // preps the filter as a frequency response array from 10hz-24khz
+      // preps the filter as a frequency response array from 8hz-22khz
       const fltPoints = [];
       const octave = Math.pow(2, 1 / 96);
       const fltResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', fltIdx);
-      const fltArray = response2array(fltResponse, 10, 24000);
-      let freq = 10;
+      const fltArray = response2array(fltResponse, 8, 22000);
+      let freq = 8;
       for (let k = 0; k < fltArray.length; k++) {
         const splValue = fltArray[k] + (useAntiHF ? antiHFRolloff[k] : 0);
         fltPoints.push([freq, splValue]);
