--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -3413,9 +3413,11 @@
     }
     async function getFilterPoints(fltIdx, useAntiHF=false) {
       // preps the filter as a frequency response array from 10hz-22khz
+      // note: anti-HF roll-off is 10hz-24khz @ 96ppo; do not change ranges or ppo!
       const fltPoints = [];
       const octave = Math.pow(2, 1 / 96);
       const fltResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', fltIdx);
+      // UHF filter reduces response to just below 24khz, so limit filters to 22khz
       const fltArray = response2array(fltResponse, 10, 22000);
       let freq = 10;
       for (let k = 0; k < fltArray.length; k++) {
