--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -525,7 +525,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.7.2</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.7.3</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -2063,26 +2063,35 @@
       console.info(`Available bass system volume adjustment range → { ${subLoTrim}dB : ${subHiTrim}dB }`);
       console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
     }
-    async function updateEQTargetSettings(idx, start, end, isSub) {
-      // aggressively line up response to target curve based on weakest region of the response
-      const offsets = [0]; // ensure target level doesn't go higher than 75dB
+    async function getDynamicBassFillOfSub(idx, start, end) {
+      // returns bass fill based on average "dip" relative to target curve
+      const subFreqResponse = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
+      const subArray = response2array(subFreqResponse, start, end);
+      const targetArray = response2array(targetResponse, start, end);
+      const arrayLength = Math.min(subArray.length, targetArray.length);
+      let totalDips = 0;
+      for (let i = 0; i < arrayLength; i++) {
+        totalDips += Math.min(subArray[i] - targetArray[i], 0);
+      }
+      const dynamicBassFill = -1 * (totalDips / arrayLength); // use average "dip" as DBF
+      console.warn(`SW dynamic bass fill (dip compensation): ${dynamicBassFill.toFixed(2)}dB`);
+      return dynamicBassFill;
+    }
+    async function updateEQTargetSettings(mlpIdx, avgIdx, start, end, isSub) {
+      // aggressively line up response to target curve using max FDW of MLP response
+      let tcLevelOffset = 0; // ensure target level doesn't go higher than 75dB
+      await postSafe(`http://localhost:4735/measurements/${mlpIdx}/ir-windows`, { addFDW: "true", fdwWidthCycles: "35" }, "Update processed");
       if (isSub) {
-        offsets.push(await getSPLOffsetFromTarget(idx,                 30,                80));
-        offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 20), Math.min(end, 120)));
-        offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 20),          end      ));
-        offsets.push(await getSPLOffsetFromTarget(idx,          start,      Math.min(end, 120)));
-        offsets.push(await getSPLOffsetFromTarget(idx,          start,               end      ));
+        const subDynamicBassFill = await getDynamicBassFillOfSub(mlpIdx, Math.max(start, 20), Math.min(end, 120));
+        tcLevelOffset = Math.max(tcLevelOffset, subDynamicBassFill); // dip compensation
       }
       else {
-        offsets.push(await getSPLOffsetFromTarget(idx,                 500,                2000));
-        offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 200), Math.min(end, 2000)));
-        offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 200),          end       ));
-        offsets.push(await getSPLOffsetFromTarget(idx,          start,       Math.min(end, 2000)));
-        offsets.push(await getSPLOffsetFromTarget(idx,          start,                end       ));
+        const speakerSPLOffsetFDW = await getSPLOffsetFromTarget(mlpIdx, Math.max(start, 200), Math.min(end, 2000));
+        tcLevelOffset = Math.max(tcLevelOffset, speakerSPLOffsetFDW); // reverb compensation
       }
-      const tcLevelOffset = Math.max(...offsets);
-      await fetchSafe('target-level', idx, 75.0 - tcLevelOffset);
-      await postSafe(`${baseUrl}/${idx}/target-settings`, {
+      await postSafe(`http://localhost:4735/measurements/${mlpIdx}/ir-windows`, { addFDW: "false" }, "Update processed");
+      await fetchSafe('target-level', avgIdx, 75.0 - tcLevelOffset);
+      await postSafe(`${baseUrl}/${avgIdx}/target-settings`, {
         shape: isSub ? "Subwoofer" : "Full range",
         lowFreqCutoffHz: (isSub && start === 10) ? 0 : start,
         lowFreqSlopedBPerOctave: 48, // steep slope to EQ without effect and keep REW happy
@@ -2331,14 +2340,24 @@
       return baseFilterIdx; // combined filter consisting of all customizations
     }
     async function getUHFFilter(idxWithEQ, targetCurveIdx) {
-      // returns magnitude only filter for knocking down any ultra high frequency peaks
+      // returns min. phase filter for knocking down any ultra high frequency peaks
       const tempEQSpeaker = await postNext('Generate predicted measurement', idxWithEQ);
       const tempEQSpeakerIdx = Object.keys(tempEQSpeaker.results)[0];
       const volAdjust = 75.0 - await fetchSafe("target-level", idxWithEQ);
       await postNext('Add SPL offset', tempEQSpeakerIdx, { offset: volAdjust });
-      await postNext('Arithmetic', [targetCurveIdx, tempEQSpeakerIdx],
-                      { function: "|A| / |B|", // magnitude only fine for UHF
-                        maxGain: 0, lowerLimit: 10000, upperLimit: 24000});
+      const UHFFilter = await postNext('Arithmetic', [targetCurveIdx, tempEQSpeakerIdx],
+                                    { function: "A / B", // magnitude only can produce artifacts
+                                      maxGain: 0, lowerLimit: 10000, upperLimit: 25000});
+      // convert to minimum phase
+      const UHFFilterIdx = Object.keys(UHFFilter.results)[0];
+      await postNext('Minimum phase version', UHFFilterIdx, {
+        "include cal": true,
+        "append lf tail": false,
+        "append hf tail": false,
+        "frequency warping": false,
+        "replicate data": true
+      });
+      await postDelete(UHFFilterIdx);
       await postDelete(tempEQSpeakerIdx); // UHF filter now at tempEQSpeakerIdx
       return tempEQSpeakerIdx;
     }
@@ -2353,7 +2372,7 @@
         const mlpIdx = cmdIdMLPIndices[commandId[i]];
         const avgIdx = cmdIdAVGIndices[commandId[i]];
         // line up response to target aggressively and set target type
-        await updateEQTargetSettings(avgIdx, m3dBPoints[i][0], m3dBPoints[i][1], isSub);
+        await updateEQTargetSettings(mlpIdx, avgIdx, m3dBPoints[i][0], m3dBPoints[i][1], isSub);
         // plug in boost parameters
         if (isSub) {
           await updateEQFilterSettings(m3dBPoints[i][0], m3dBPoints[i][1],
@@ -3393,15 +3412,18 @@
         }
       });
     }
-    async function getFilterPoints(fltIdx, useAntiHF=false) {
-      // preps the filter as a frequency response array from 10hz-24khz
+    async function getFilterPoints(fltIdx, isSub=false) {
+      // preps the filter as a frequency response array
+      // note: anti-HF roll-off is 10hz-24khz @ 96ppo; do not change ranges or ppo!
       const fltPoints = [];
+      const startFreq = isSub ? 5 : 10; // allow lower frequency points for subwoofers
+      const endFreq = isSub ? 500 : 22500; // UHF filter reduces responses to just below 24khz
       const octave = Math.pow(2, 1 / 96);
       const fltResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', fltIdx);
-      const fltArray = response2array(fltResponse, 10, 24000);
-      let freq = 10;
+      const fltArray = response2array(fltResponse, startFreq, endFreq);
+      let freq = startFreq;
       for (let k = 0; k < fltArray.length; k++) {
-        const splValue = fltArray[k] + (useAntiHF ? antiHFRolloff[k] : 0);
+        const splValue = fltArray[k] + (isSub ? 0 : antiHFRolloff[k]);
         fltPoints.push([freq, splValue]);
         freq *= octave;
       }
@@ -3447,7 +3469,7 @@
       // inject filters/TC into ady
       for (let i = 1; i <= nSpeakers; i++) {
         const fltIdx = cmdIdFilterIndices[commandId[i]];
-        const customTargetCurvePoints = await getFilterPoints(fltIdx, true);
+        const customTargetCurvePoints = await getFilterPoints(fltIdx);
         const thisChannel = jsonData.detectedChannels.find(channel => channel.commandId === commandId[i]);
         thisChannel.customTargetCurvePoints = customTargetCurvePoints;
         thisChannel.midrangeCompensation = false;
@@ -3460,7 +3482,7 @@
       }
       if (!noSub) {
         const fltIdxSub = cmdIdFilterIndices[commandId[nChannels]];
-        const customTargetCurvePointsSub = await getFilterPoints(fltIdxSub);
+        const customTargetCurvePointsSub = await getFilterPoints(fltIdxSub, true);
         const subChannel = jsonData.detectedChannels[nChannels - 1];
         subChannel.customTargetCurvePoints = customTargetCurvePointsSub;
         let k = 0;
