--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -525,7 +525,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.7.4</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.7.5</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -2109,7 +2109,7 @@
       }, "Update processed");
     }
     async function getALOffset(idx, isSub) {
-      const offset = isSub ? await getSPL(idx, 30, 80) : await getSPL(idx, 500, 2000);
+      const offset = isSub ? await getSPL(idx, 30, 80, "1%2F1") : await getSPL(idx, 500, 2000, "1%2F1");
       return offset;
     }
     async function getNextEQIdx(idx) {
@@ -3185,9 +3185,9 @@
       }
       return responseArray;
     }
-    async function getSPL(idx, start, end) {
+    async function getSPL(idx, start, end, smoothing="Psy") {
       // calculates average SPL between start and end frequencies
-      const freqResponse = await fetchSafe('frequency-response?smoothing=1%2F1&ppo=96', idx);
+      const freqResponse = await fetchSafe(`frequency-response?smoothing=${smoothing}&ppo=96`, idx);
       const freqArray = response2array(freqResponse, start, end);
       const freqSPL = freqArray.reduce((acc, val) => acc + val, 0) / freqArray.length;
       return freqSPL; // average dB SPL
