remove obsolete comments; update readme

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -3245,8 +3245,7 @@
       }
     }
     async function align4system(ind1, ind2, start, end, loDelay, hiDelay) {
-      // slopeless integration means finding the delay that causes max cancellation
-      // note: using 1/1 smoothing for evaluating adds priority for wider cancellations (which is good)
+      // slopeless integration means finding the delay that causes maximum cancellation
       console.info(`Proximity based delay range: ${loDelay.toFixed(2)}ms <-> ${hiDelay.toFixed(2)}ms`);
       let isInverted = false, requiredDelay = NaN, minSum = Infinity;
       await postNext('Smooth', ind1, { smoothing: "1/48" });
@@ -3290,7 +3289,7 @@
       return [requiredDelay, isInverted];
     }
     async function alignMsub(ind1, ind2, start, end, loDelay, hiDelay) {
-      // note: using 1/1 smoothing for evaluating adds priority for wider summations (which is good)
+      // finds delay that produces maximum summation
       console.info(`Proximity based delay range: ${loDelay.toFixed(2)}ms <-> ${hiDelay.toFixed(2)}ms`);
       let isInverted = false, requiredDelay = NaN, maxSum = -Infinity;
       await postNext('Smooth', ind1, { smoothing: "1/48" });
