--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -3264,13 +3264,13 @@
       for (let i = loDelay; i <= hiDelay; i += 0.075) {
         console.infoUpdate(`Checking: ${i.toFixed(2)}ms, Best: ${requiredDelay.toFixed(2)}ms Inverted: ${isInverted}`);
         await postSafe("http://localhost:4735/alignment-tool/delay-b", i, "Value set");
-        const tempSum = await fetchAlign('aligned-frequency-response?smoothing=1%2F48&ppo=96');
+        const tempSum = await fetchAlign('aligned-frequency-response?smoothing=Psy&ppo=96');
         const tempSumArray = response2array(tempSum, start, end);
         let tempMagSum = getAvgdB(tempSumArray);
         let tempSumInverted = false;
         if (!noInversion) {
           await postSafe("http://localhost:4735/alignment-tool/invert-b", true, "Value set");
-          const tempSumInv = await fetchAlign('aligned-frequency-response?smoothing=1%2F48&ppo=96');
+          const tempSumInv = await fetchAlign('aligned-frequency-response?smoothing=Psy&ppo=96');
           const tempSumArrayInv = response2array(tempSumInv, start, end);
           const tempMagSumInv = getAvgdB(tempSumArrayInv);
           if (tempMagSum > tempMagSumInv) {
@@ -3286,12 +3286,17 @@
         }
       }
       console.infoUpdate(`Optimal delay: ${requiredDelay.toFixed(2)}ms, Inverted: ${isInverted}`);
+      // restore original gain just as a good practice
+      await postSafe("http://localhost:4735/alignment-tool/gain-a", 0, "Value set");
+      await postSafe("http://localhost:4735/alignment-tool/gain-b", 0, "Value set");
       return [requiredDelay, isInverted];
     }
     async function alignMsub(ind1, ind2, start, end, loDelay, hiDelay) {
-      // finds delay that produces maximum summation
+      // finds delay that produces maximum summation by optimizing for maximum cancellation with inverted ind2
+      // note: using Psy smoothing + linear power conversion ensures widest possible cancellation
       console.info(`Proximity based delay range: ${loDelay.toFixed(2)}ms <-> ${hiDelay.toFixed(2)}ms`);
-      let isInverted = false, requiredDelay = NaN, maxSum = -Infinity;
+      let isInverted = false, requiredDelay = NaN, minSum = Infinity;
+      await postSafe(`${baseUrl}/${ind2}/command`,{command: "Invert"}, "Invert completed");
       await postNext('Smooth', ind1, { smoothing: "1/48" });
       await postNext('Smooth', ind2, { smoothing: "1/48" });
       await postAlign('Reset all');
@@ -3307,28 +3312,30 @@
       for (let i = loDelay; i <= hiDelay; i += 0.075) {
         console.infoUpdate(`Checking: ${i.toFixed(2)}ms, Best: ${requiredDelay.toFixed(2)}ms Inverted: ${isInverted}`);
         await postSafe("http://localhost:4735/alignment-tool/delay-b", i, "Value set");
-        const tempSum = await fetchAlign('aligned-frequency-response?smoothing=1%2F48&ppo=96');
+        const tempSum = await fetchAlign('aligned-frequency-response?smoothing=Psy&ppo=96');
         const tempSumArray = response2array(tempSum, start, end);
         let tempMagSum = getAvgdB(tempSumArray);
         let tempSumInverted = false;
         if (!noInversion) {
           await postSafe("http://localhost:4735/alignment-tool/invert-b", true, "Value set");
-          const tempSumInv = await fetchAlign('aligned-frequency-response?smoothing=1%2F48&ppo=96');
+          const tempSumInv = await fetchAlign('aligned-frequency-response?smoothing=Psy&ppo=96');
           const tempSumArrayInv = response2array(tempSumInv, start, end);
           const tempMagSumInv = getAvgdB(tempSumArrayInv);
-          if (tempMagSum < tempMagSumInv) {
+          if (tempMagSum > tempMagSumInv) {
             tempMagSum = tempMagSumInv;
             tempSumInverted = true;
           }
           await postSafe("http://localhost:4735/alignment-tool/invert-b", false, "Value set");
         }
-        if (maxSum < tempMagSum) {
-          maxSum = tempMagSum;
+        if (minSum > tempMagSum) {
+          minSum = tempMagSum;
           requiredDelay = i;
           isInverted = tempSumInverted;
         }
       }
       console.infoUpdate(`Optimal delay: ${requiredDelay.toFixed(2)}ms, Inverted: ${isInverted}`);
+      // restore original polarity so aligned sum is correct
+      await postSafe(`${baseUrl}/${ind2}/command`,{command: "Invert"}, "Invert completed");
       // restore original gain so aligned sum is correct
       await postSafe("http://localhost:4735/alignment-tool/gain-a", 0, "Value set");
       await postSafe("http://localhost:4735/alignment-tool/gain-b", 0, "Value set");
